MODKBEKBJ-624 fix code smells